src/test/deca/etapeB/invalid/binary_op_bool/leq_string_bool.deca
// Description:
//    Inégalité entre bool et String
//
// Resultats:
//    Mauvais opérateurs pour l'inégalité
// 
// Historique:
//    cree le 01/01/2016

{
    String a = "ok";
    boolean d = true;

    if(a <= d) {};
}
